完成每局数据散点图的可视化

--- a/html/chart.html
+++ b/html/chart.html
@@ -824,73 +824,20 @@
 
     <script>
         $.ajax({
-            url:'../data/20170123matchdetail.json',
+            url:'../data/20170124matchdetail.json',
             type:'GET',
             dataType:'json',
             data : {},
         }).done(function(data){
             matchInfo = data;
-            var dataBJ = [
-    [1, 55, 20, 56, 10000, "初中", 30, "已婚", "男", " "],
-    [2, 25, 11, 21, 20000, "高中", 28, "未婚", "男", " "],
-    [3, 70, 50, 40, 60000, "高中", 40, "已婚", "男", " "],
-    [4, 60, 35, 29, 24000, "高中", 48, "未婚", "男", " "],
-    [5, 80, 55, 56, 80000, "本科", 48, "已婚", "女", " "],
-    [6, 50, 57, 60, 40000, "本科", 30, "未婚", "女", " "],
-    [7, 74, 49, 36, 46000, "本科", 28, "已婚", "女", " "],
-    [8, 40, 55, 32, 20000, "本科", 20, "未婚", "男", " "],
-    [9, 80, 60, 43, 90000, "高中", 36, "已婚", "男", " "],
-    [10, 35, 28, 34, 48000, "高中", 15, "未婚", "男", " "],
-    [11, 58, 19, 33, 62000, "高中", 28, "已婚", "女", " "],
-    [12, 41, 11, 54, 36000, "高中", 26, "已婚", "男", " "],
-    [13, 64, 38, 62, 56000, "高中", 33, "已婚", "男", " "],
-    [14, 50, 79, 55, 48000, "本科", 36, "已婚", "女", " "],
-    [15, 40, 63, 44, 23000, "高中", 28, "已婚", "男", " "],
-    [16, 33, 6, 24, 70000, "高中", 14, "未婚", "男", " "],
-    [17, 88, 66, 76, 24000, "本科",25, "已婚", "男", " "],
-    [18, 66, 50, 66, 58000, "高中", 28, "未婚", "女", " "],
-    [19, 57, 31, 34, 49000, "硕士", 29, "已婚", "男", " "],
-    [20, 22, 8, 21,  39000, "本科", 30, "未婚", "男", " "],
-    [21, 39, 15, 36, 21000, "高中", 20, "未婚", "女", " "],
-    [22, 89, 69, 56, 26000, "高中", 35, "已婚", "男", " "],
-    [23, 88, 73, 60, 31000, "高中",33, "已婚", "男", " "],
-    [24, 31, 16, 35, 41000, "本科", 26, "未婚", "女", " "],
-    [25, 42, 25, 43, 52000, "高中", 31, "已婚", "女", " "],
-    [26, 60, 40, 38, 90000, "硕士", 30, "已婚", "男", " "],
-    [27, 24, 12, 19, 88000, "硕士", 45, "未婚", "女", " "],
-    [28, 44, 24, 39, 32000, "高中", 40, "未婚", "男", " "],
-    [29, 89, 96, 47, 88000, "硕士", 39, "已婚", "女", " "],
-    [30, 52, 24, 29, 45000, "高中", 32, "已婚", "男", " "],
-    [31, 55, 20, 56, 10000, "初中", 30, "已婚", "男", " "],
-    [32, 25, 11, 21, 20000, "高中", 28, "未婚", "男", " "],
-    [33, 70, 50, 40, 60000, "高中", 40, "已婚", "男", " "],
-    [34, 60, 35, 29, 24000, "高中", 48, "未婚", "男", " "],
-    [35, 80, 55, 56, 80000, "本科", 48, "已婚", "女", " "],
-    [36, 50, 57, 60, 40000, "本科", 30, "未婚", "女", " "],
-    [37, 74, 49, 36, 46000, "本科", 28, "已婚", "女", " "],
-    [38, 40, 55, 32, 20000, "本科", 47, "未婚", "男", " "],
-    [39, 80, 60, 43, 90000, "高中", 36, "已婚", "男", " "],
-    [40, 35, 28, 34, 48000, "高中", 39, "未婚", "男", " "],
-    [41, 58, 19, 33, 62000, "高中", 28, "已婚", "女", " "],
-    [42, 41, 11, 54, 36000, "高中", 40, "已婚", "男", " "],
-    [43, 64, 38, 62, 56000, "高中", 33, "已婚", "男", " "],
-    [44, 50, 79, 55, 48000, "本科", 36, "已婚", "女", " "],
-    [45, 40, 63, 44, 23000, "高中", 28, "已婚", "男", " "],
-    [46, 33, 6, 24, 70000, "高中", 46, "未婚", "男", " "],
-    [47, 88, 66, 76, 24000, "本科",25, "已婚", "男", " "],
-    [48, 66, 50, 66, 58000, "高中", 39, "未婚", "女", " "],
-    [49, 57, 31, 34, 49000, "硕士", 29, "已婚", "男", " "],
-    [50, 22, 8, 21,  39000, "本科", 30, "未婚", "男", " "],
-];
+            console.log(matchInfo['monkey2'])
             var dataAss = matchInfo['ass']
             var dataBear = matchInfo['bear']
             var dataMonkey = matchInfo['monkey']
-            var dataMonkey2 = matchInfo['monkye2']
+            var dataMonkey2 = matchInfo['monkey2']
             var dataBrave = matchInfo['brave']
             var dataMan = matchInfo['man']
-            var dataBeard = matchInfo['beart']
-            console.log(dataBJ);
-            console.log(dataAss)
+            var dataBeard = matchInfo['beard']
             var schema = [
                 {name: 'date', index: 0, text: '日'},
                 {name: 'hero', index: 1, text: '英雄'},
@@ -899,7 +846,7 @@
                 {name: 'assist', index: 4, text: '助攻'},
                 {name: 'lasthit', index: 5, text: '补刀'},
                 {name: 'xpm', index: 6, text: 'XPM'},
-                {name: 'gpm', index: 6, text: 'GPM'}
+                {name: 'gpm', index: 7, text: 'GPM'}
             ];
             var itemStyle = {
                 normal: {
@@ -918,29 +865,29 @@
                         fontSize: 17
                     }
                 },
-            toolbox:{
-                feature: {
-                    saveAsImage: {show:true}
-                }
-            },
-            backgroundColor: '#404a59',
-            color: [
+                toolbox:{
+                    feature: {
+                        saveAsImage: {show:true}
+                    }
+                },
+                backgroundColor: '#404a59',
+                color: [
                 '#dd4444', '#fec42c', '#80F1BE'
-            ],
-            legend: {
-                show: true,
-                y: 'top',
-                data: ['ass', 'bear', 'monkey','man','brave','beard','monkey2'],
-                textStyle: {
-                    color: '#fff',
-                    fontSize: 16
-                }
-            },
+                ],
+                legend: {
+                    y: 'top',
+                    data: ['bear', 'brave', 'monkey2'],
+                    textStyle: {
+                        color: '#fff',
+                        fontSize: 16
+                    }
+                },
             grid: {
                 x: '10%',
                 x2: 150,
                 y: '18%',
-                y2: '10%'
+                y2: '10%',
+                show:true
             },
             tooltip: {
                 padding: 10,
@@ -950,28 +897,32 @@
                 formatter: function (obj) {
                     var value = obj.value;
                     return '<div style="border-bottom: 1px solid rgba(255,255,255,.3); font-size: 18px;padding-bottom: 7px;margin-bottom: 7px">'
-                        + obj.seriesName + '使用了: ' + dataAss[1]
+                        + obj.seriesName + '使用了: ' + value[7]
                         + '</div>'
-                        + schema[1].text + '：' + value[1] + '<br>'
-                        + schema[2].text + '：' + value[2] + '<br>'
-                        + schema[3].text + '：' + value[3] + '<br>'
-                        + schema[4].text + '：' + value[4] + '<br>'
-                        + schema[5].text + '：' + value[5] + '<br>'
-                        + schema[6].text + '：' + value[6] + '<br>';
+                        + schema[1].text + '：' + value[7] + '<br>'
+                        + schema[2].text + '：' + value[1] + '<br>'
+                        + schema[3].text + '：' + value[2] + '<br>'
+                        + schema[4].text + '：' + value[3] + '<br>'
+                        + schema[5].text + '：' + value[4] + '<br>'
+                        + schema[6].text + '：' + value[5] + '<br>'
+                        + schema[7].text + '：' + value[6] + '<br>'
                 }
             },
             xAxis: {
-                data:[1,2,3,4,5,6,7,8,9],
-                name: '交易时间（分钟）',
+
+                name: '时间(24小时)',
                 nameGap: 16,
-                type: 'category',
+                type: 'value',
+
                 nameTextStyle: {
                     color: '#fff',
                     fontSize: 14
                 },
-                //max: 31,
+                min : 8,
+                max: 22,
+                interval:1,
                 splitLine: {
-                    show: false
+                    show: true
                 },
                 axisLine: {
                     lineStyle: {
@@ -1001,14 +952,14 @@
                 {
                     left: 'right',
                     top: '10%',
-                    dimension: 4,
+                    dimension: 1,
                     min: 0,
-                    max: 10,
+                    max: 30,
                     itemWidth: 30,
                     itemHeight: 120,
                     calculable: true,
-                    precision: 0.1,
-                    text: ['圆形大小：盈利比'],
+                    precision: 0.01,
+                    text: ['KDA'],
                     textGap: 30,
                     textStyle: {
                         color: '#fff'
@@ -1032,48 +983,24 @@
 
             ],
             series: [
-                {
-                    name: 'ass',
-                    type: 'scatter',
-                    itemStyle: itemStyle,
-                    data: dataBJ
-                },
-                {
+                 {
                     name: 'bear',
                     type: 'scatter',
                     itemStyle: itemStyle,
-                    data: dataBJ
-                },
-                {
-                    name: 'monkey',
-                    type: 'scatter',
-                    itemStyle: itemStyle,
-                    data: dataBJ
-                },
-                {
-                    name: 'man',
-                    type: 'scatter',
-                    itemStyle: itemStyle,
-                    data: dataBJ
+                    data: dataBear,
                 },
                 {
                     name: 'brave',
                     type: 'scatter',
                     itemStyle: itemStyle,
-                    data: dataBJ
+                    data: dataBrave,
+
                 },
                 {
-                    name: 'beard',
+                    name: 'monkey2',
                     type: 'scatter',
                     itemStyle: itemStyle,
-                    data: dataBJ
-                },
-                {
-                    name: 'monkye2',
-                    type: 'scatter',
-                    itemStyle: itemStyle,
-                    data: dataBJ,
-                    data: dataBJ
+                    data: dataMonkey2,
                 }
             ]
         };
